# spideog

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.txt  test.graph
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
braken-report-parser/: Cargo.toml
ci/: before_deploy.sh  install.sh  script.sh
kraken-report-parser/: Cargo.toml
spideog-bin/: Cargo.toml
src/: bracken.rs  cli.rs  data.rs  errors.rs  io.rs  kraken.rs  lib.rs  main.rs  parser.rs  subcommands.rs  taxonomy.rs  tree.rs  utils.rs
src/cli/: args.rs  error.rs  logging.rs  subcommands.rs
src/data/: abundance.rs  tree.rs
src/io/: abundance_csv.rs  newick.rs  report.rs
src/subcommands/: combine_abundance.rs  combine_phylo.rs  convert_abundance.rs  convert_phylo.rs  merge_phylo.rs
tests/: cli.rs
tests/sample_data/: combined.csv  combined.tree  converted.csv  sample.kreport  sample.tree  sample_2.kreport
