[package]
name = "spideog"
version = "0.1.0"
authors = ["Jean Manguy <jean.manguy@gmail.com>"]
edition = "2018"
description = "Command line utility to visualize and analyze metagenomics classification from Kraken and Bracken"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
color-eyre = { version = "0.5", default-features = false, features = ["issue-url", "track-caller", "capture-spantrace"] }
clap = { version = "~3.0.0-beta.1", default-features = false, features = [ "wrap_help", "derive", "suggestions", "color", "std" ] }
clap_generate = "3.0.0-beta.1"
nom = { version = "5.1", features = ["regexp"]}
daggy = "0.7"
petgraph = "0.5"
log = "0.4"
simplelog = "0.8"
displaydoc = "0.1"
once_cell = "1.4"
atty = "0.2" 
dialoguer = "0.6"
enum_derive = "0.1.7"
custom_derive = "0.1"
eyre = "0.6"


[profile.dev]
panic = "unwind"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
panic = "unwind"
codegen-units = 1

