[package]
name = "spideog"
version = "0.1.2-alpha.1"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
description = "Command line utility to analyse and convert Kraken reports"
publish = false
readme = "README.md"
repository = "https://github.com/jeanmanguy/spideog"
documentation = "https://github.com/jeanmanguy/spideog/blob/main/README.md"
keywords = ["cli", "bioinformatics", "metagenomics"]
categories = ["command-line-utilities", "science"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
# color-eyre = { version = "0.5", default-features = false, features = ["issue-url", "capture-spantrace"] }
color-eyre = { version = "0.5", features = ["issue-url"] }
clap = { version = "~3.0.0-beta.2", default-features = false, features = [ "derive", "suggestions", "color", "std" ] }
clap_generate = "3.0.0-beta.2"
nom = { version = "5.1"} # do I need regexp?
daggy = "0.7"
petgraph = "0.5"
log = "0.4"
simplelog = "0.8"
displaydoc = "0.1"
once_cell = "1.4"
atty = "0.2" 
dialoguer = "0.6"
enum_derive = "0.1.7"
custom_derive = "0.1"
eyre = "0.6"
tracing-error = "0.1.2"
tracing = { version = "0.1.17", features = [ "attributes" ] }
tracing-subscriber = "0.2.10"
exitcode = "1.1.2"

[dev-dependencies]
test-case = "1.0"

[lib]
name = "libspideog"
path = "src/lib.rs"

[[bin]]
name = "spideog"
path = "src/main.rs"

[profile.dev]
panic = "unwind"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
panic = "unwind"
codegen-units = 1


[package.metadata.release]
disable-publish = true
consolidate-commits = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace="{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace="...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace="{{date}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-header -->"
replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-url -->"
replace="<!-- next-url -->\n[Unreleased]: https://github.com/jeanmanguy/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly=1
